# opnevino_onnx_example

./: .gitignore  CMakeLists.txt  README.md  convert2onnx.py  inference.cpp  inference_dynamic.cpp  run_docker.sh
